# Snake

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  generate_project.bat  premake5.lua
Engine/: CMakeLists.txt  premake5.lua
Snake/: CMakeLists.txt  copy_assets.cmake  imgui.ini  premake5.lua
Snake/assets/shaders/: sprite.frag  sprite.glsl  sprite.vert  text.frag  text.glsl  text.vert
Snake/src/: Application.cpp  Application.h  CMakeLists.txt  GameLayer.cpp  GameLayer.h  GameState.cpp  GameState.h  GameoverState.cpp  GameoverState.h  MenuState.cpp  MenuState.h  Snake.cpp  Snake.h  SnakeApplication.cpp  State.cpp  State.h  StateManager.cpp  StateManager.h  World.cpp  World.h  main.cpp
Snake/src/Graphics/: Buffer.cpp  Buffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Snake/src/States/: GameState.cpp  GameState.h  GameoverState.cpp  GameoverState.h  MenuState.cpp  MenuState.h  State.cpp  State.h  StateManager.cpp  StateManager.h
Snake/src/States/Game/: GameState.cpp  GameState.h  GameoverState.cpp  GameoverState.h  Snake.cpp  Snake.h  World.cpp  World.h
Snake/src/States/Menu/: MenuState.cpp  MenuState.h
Snake/src/Utils/: FileIO.cpp  FileIO.h  InputManager.cpp  InputManager.h  ResourceManager.cpp  ResourceManager.h  State.cpp  State.h  StateIdentifiers.h  StateManager.cpp  StateManager.h
Snake/src/Utils/ImGui/: ImGuiRenderer.cpp  ImGuiRenderer.h
scripts/: build_project.bat  genLinux.sh  genWindows.bat
(+40 files in other folders)
